src/test/ui/error-codes/E0010-teach.stderr
error[E0010]: allocations are not allowed in constants
  --> $DIR/E0010-teach.rs:6:24
   |
LL | const CON : Box<i32> = box 0; //~ ERROR E0010
   |                        ^^^^^ allocation not allowed in constants
   |
   = note: The value of statics and constants must be known at compile time, and they live for the entire lifetime of a program. Creating a boxed value allocates memory on the heap at runtime, and therefore cannot be done at compile time.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0010`.
